# elo-indexserver-client

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_DEVELOPMENT.md  conf.py  index.rst  pyproject.toml
.github/workflows/: buildAndTest.yml  buildDoc.yml  release.yml
eloRestAPI/: Readme.md  openapi.json  openapi_v23.json
eloclient/: __init__.py
eloclient/models/: __init__.py  access_c.py  acl_access_info.py  acl_access_result.py  acl_item.py  acl_item_c.py  action.py  action_c.py  action_data_c.py  action_hist_data_c.py  action_history.py  action_history_c.py  action_z.py  activity.py  activity_c.py  activity_data_c.py  activity_option.py  activity_option_c.py  activity_project.py  activity_project_c.py  activity_project_data_c.py  activity_z.py  admin_mode_c.py  aggregation_options.py  aggregation_order_e.py  aggregation_query.py  aggregation_query_params.py  aggregation_result.py  aggregation_type_e.py  alert.py  alert_c.py  alert_data_c.py  and_operator.py  any_.py  any_c.py  apply_for_notifications_info.py  arc_path.py  archiv_report.py  archiv_value.py  archive_statistics.py  (+1159 more)
eloservice/: elo_service.py  eloconstants.py  error_handler.py  file_util.py  login_util.py  map_util.py  mask_util.py  search_util.py  user_util.py
examples/: Dockerfile_dataImport  Pipfile  Readme.md  docker-compose.yml  examples.ipynb
examples/batchProcessing/: Dockerfile_consumer  (+5 more)
test/: __init__.py  test_elo_service.py  test_file_util.py  test_login_util.py  test_map_util.py  test_mask_util.py  test_performance.py  test_search_util.py  test_user_util.py
(+406 files in other folders)
